--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon dist/app.js"
+    "start": "tsc-watch --onSuccess \"node ./dist/app.js\""
   },
   "author": "",
   "license": "ISC",
@@ -36,6 +36,8 @@
     "@types/nodemailer": "^6.4.1",
     "@types/passport-local": "^1.0.33",
     "@types/uuid": "^8.3.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "tsc-watch": "^4.4.0",
+    "typescript": "^4.3.4"
   }
 }
