--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines": { "node": "12.16.3" },
+  "engines": {
+    "node": "12.16.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc-watch --onSuccess \"node ./dist/app.js\""
@@ -25,7 +27,10 @@
     "nodemailer": "^6.6.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "nodemon": "^2.0.7",
+    "tsc-watch": "^4.4.0",
+    "typescript": "^4.3.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -36,9 +41,6 @@
     "@types/node": "^15.0.2",
     "@types/nodemailer": "^6.4.1",
     "@types/passport-local": "^1.0.33",
-    "@types/uuid": "^8.3.0",
-    "nodemon": "^2.0.7",
-    "tsc-watch": "^4.4.0",
-    "typescript": "^4.3.4"
+    "@types/uuid": "^8.3.0"
   }
 }
