--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc-watch --onSuccess \"node ./dist/app.js\"",
+    "dev": "tsc-watch --onSuccess \"node ./dist/app.js\"",
+    "start": "node ./dist/app.js",
     "build": "tsc"
   },
   "author": "",
