--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "12.16.3"
+    "node": "12.16.3",
+    "yarn": "1.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
