--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "express-validator": "^6.11.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
-    "mongoose": "^5.12.8",
+    "mongoose": "5.12.8",
     "nodemailer": "^6.6.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
